core/force-app/main/default/objects/Account/fields/EXT_ID__c.field-meta.xml
<CustomField>
    <fullName>EXT_ID__c</fullName>
    <externalId>true</externalId>
    <label>EXT ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>