core/force-app/main/default/objects/Account/fields/Handover_notes__c.field-meta.xml
<CustomField>
    <fullName>Handover_notes__c</fullName>
    <description>Handover notes to make the handover to the onboarding team more straightforward</description>
    <label>Handover notes</label>
    <type>TextArea</type>
</CustomField>