core/force-app/main/default/objects/Account/fields/Head_office_time_zone__c.field-meta.xml
<CustomField>
    <fullName>Head_office_time_zone__c</fullName>
    <description>A field to indicate the head office time zone.</description>
    <label>Head office time zone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Time_Zone_Abbreviations</valueSetName>
    </valueSet>
</CustomField>